--- 2 ---
Begin tracking TensorBoard changes.