@@ -1,2 +1,6 @@
 --- 2 ---
 Begin tracking TensorBoard changes.
+
+--- 3 ---
+Change default # of scalar values to 1000
+Fix bug where TensorBoard discards all values after a restart.
